--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,11 @@ h1 {
     color: red;
     text-align: center;
 }
+
+p {
+    background-color: greenyellow;
+    width: 200px;
+    height: 100px;
+    margin: 30px;
+    padding: 20px;
+}
